fix(postList): Fix Post List's title align with post cards close #52

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -131,6 +131,31 @@ body {
   letter-spacing: 34px;
   font-weight: bolder;
 }
+/* Mobile */
+@media only screen and (max-width: 767px) {
+  .post-list-title {
+    text-align: center;
+  }
+}
+/* Tablet */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .post-list-title {
+    margin-left: 9%;
+  }
+}
+/* Small Monitor */
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .post-list-title {
+    margin-left: 2%;
+  }
+}
+/* Large Monitor */
+@media only screen and (min-width: 1200px) {
+  .post-list-title {
+    margin-left: 10%;
+  }
+}
+
 
 .post-list-card-img {
   width: 100%;
